syntax = "proto3";

package eventstore.test.events;

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message SearchResult {
  repeated string result = 1;
  int32 number_of_results = 2;
}
